Добавил мужские фото

--- a/woman.html
+++ b/woman.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Badoo:Найди себе пару</title>
-    <link rel="stylesheet" type="text/css" href="sign.css">
+    <link rel="stylesheet" type="text/css" href="woman.css">
     <link rel="shortcut icon" href="badoo.jpg" type="image-icon">
 </head>
 
@@ -31,7 +31,7 @@
             </div>
         </div>
     </div>
-    <script src="sign.js"></script>
+    <script src="woman.js"></script>
 </body>
 
 </html>
